--- a/tests/templates/tests/passing_test.html
+++ b/tests/templates/tests/passing_test.html
@@ -31,11 +31,11 @@
               <button class="btn btn-success btn-lg" type="submit" name="next">Следующий вопрос</button>
           {% endif %}
         </div>
+        <br>
+        <div class="text-center mt">
+          <button class="btn btn-primary btn-lg boxregistr" type="submit" name="send">Отправить тест</button>
+        </div>
     </form>
-      <br>
-      <div class="text-center mt">
-        <button class="btn btn-primary btn-lg boxregistr" type="submit">Отправить тест</button>
-      </div>
       
 <script>
   function checkbox(){
