--- a/tests/templates/tests/test_result.html
+++ b/tests/templates/tests/test_result.html
@@ -3,17 +3,46 @@
 {% block content %}
 <head>
     <title>{{ title }}</title>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>  
 </head>
 <body>
     <div class="heading text-center mb">Результаты теста</div>
     <div style="margin-left: 15%;">
     <div class="menulink" style="display: inline-block;">Ваш результат: </div>
     <div style="display: inline-block;">{{ result }}</div>
-    <div class="col-sm-4 mt text-center">
-        <button class="btn btn-success btn-lg">Вернуться на главную</button>
+    <div class="col-sm-10 mt text-center">
+        <button type="button" class="btn btn-success btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">Вернуться на главную</button>
     </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Вы можете поставить оценку данному тесту:</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form method="post">
+            {% csrf_token %}
+            <div class="modal-body">
+                <div class="rating-area">
+                    <input type="radio" id="star-5" name="rating" value="5">
+                    <label for="star-5" title="Оценка «5»"></label>	
+                    <input type="radio" id="star-4" name="rating" value="4">
+                    <label for="star-4" title="Оценка «4»"></label>    
+                    <input type="radio" id="star-3" name="rating" value="3">
+                    <label for="star-3" title="Оценка «3»"></label>  
+                    <input type="radio" id="star-2" name="rating" value="2">
+                    <label for="star-2" title="Оценка «2»"></label>    
+                    <input type="radio" id="star-1" name="rating" value="1">
+                    <label for="star-1" title="Оценка «1»"></label>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <a href="{% url 'main' %}"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button></a>
+              <button type="submit" class="btn btn-primary">Поставить оценку</button>
+            </div>
+        </form>
+          </div>
+        </div>
+      </div>
     </div>
 </body>
 {% endblock %}
