--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -87,7 +87,7 @@
     {% if request.user.is_authenticated %}
     <div class="dropdown">
       <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="media/{{ user.avatar }}" alt="" width="40" height="40" class="rounded-circle me-2">
+        <img src="/media/{{ user.avatar }}" alt="" width="40" height="40" class="rounded-circle me-2">
         <strong>{{ user.username }}</strong>
       </a>
       <ul class="dropdown-menu dropdown-menu-dark text-xl-center shadow">
