--- a/tests/templates/tests/test_result.html
+++ b/tests/templates/tests/test_result.html
@@ -8,9 +8,13 @@
     <div class="heading text-center mb">Результаты теста</div>
     <div style="margin-left: 15%;">
     <div class="menulink" style="display: inline-block;">Ваш результат: </div>
-    <div style="display: inline-block;">{{ result }}</div>
+    <div style="display: inline-block;">{{ object.result }}</div>
     <div class="col-sm-10 mt text-center">
+      {% if object.feedback == False %}
         <button type="button" class="btn btn-success btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal">Вернуться на главную</button>
+      {% else %}
+        <a href="{% url 'main' %}"><button type="button" class="btn btn-success btn-lg">Вернуться на главную</button></a>
+      {% endif %}
     </div>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -23,16 +27,7 @@
             {% csrf_token %}
             <div class="modal-body">
                 <div class="rating-area">
-                    <input type="radio" id="star-5" name="rating" value="5">
-                    <label for="star-5" title="Оценка «5»"></label>	
-                    <input type="radio" id="star-4" name="rating" value="4">
-                    <label for="star-4" title="Оценка «4»"></label>    
-                    <input type="radio" id="star-3" name="rating" value="3">
-                    <label for="star-3" title="Оценка «3»"></label>  
-                    <input type="radio" id="star-2" name="rating" value="2">
-                    <label for="star-2" title="Оценка «2»"></label>    
-                    <input type="radio" id="star-1" name="rating" value="1">
-                    <label for="star-1" title="Оценка «1»"></label>
+                  {{ form.star }}
                 </div>
             </div>
             <div class="modal-footer">
