--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -182,7 +182,7 @@
                 <hr class="my-4">
       
                 <div class="boxregistr">
-                  <input type="checkbox" class="form-check-input" id="same-address" required>
+                  <input type="checkbox" id="same-address" required>
                   <label class="form-check-label" for="same-address">Я соглашаюсь с политикой конфиденциальности</label>
                   <div class="invalid-feedback">
                     Вы не согласились с политикой конфиденциальности!
