--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -139,7 +139,7 @@
             </div>
       </div>
 
-      <div style="margin-top: 80px;">
+      <div style="margin-top: calc(100vh - 410px);">
         <hr class="hr-shelf">
         <footer class="d-flex flex-wrap justify-content-between align-items-center">
           <div class="col-md-4 d-flex align-items-center foottitle">
